before fleet