@@ -8,6 +8,7 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Component;
 
 import java.util.Arrays;
+import java.util.List;
 import java.util.Optional;
 
 @Component
@@ -23,8 +24,11 @@ class ProvidersMembershipFacadeImpl implements ProvidersMembershipFacade {
     }
 
     @Override
-    public boolean hasAnyRole(int companyId, int accountId, String... roleCodes) {
-        var codes = (roleCodes == null) ? java.util.List.<String>of() : Arrays.asList(roleCodes);
+    public boolean hasAnyRole(int companyId, int accountId, int... roleCodes) {
+        List<Integer> codes = (roleCodes == null)
+                ? List.of()
+                : Arrays.stream(roleCodes).boxed().toList();
+
         return queryService.hasAnyRole(companyId, accountId, codes);
     }
 
